# ComplexWorld

./: .clang-format  .gitignore  .gitmodules  .hgeol  .hgignore  .hgsub  .hgsubstate  BuildSystem.cmake  CMakeLists.txt
Source/: CMakeLists.txt
Source/CMake/: CommonAlgorithmFiles.cmake  CommonComplexApplicationFiles.cmake  CommonFiles.cmake  CommonProgrammingGameAIFiles.cmake
Source/Common/Algorithm/include/: MetaData.h  Plugin.h  PluginMetaData.h  RandomNumber.h
Source/Common/Algorithm/include/Widgets/: Controller.h
Source/Common/Algorithm/res/qrc/: CommonQrc.qrc
Source/Common/Algorithm/src/: MetaData.cpp  Plugin.cpp  RandomNumber.cpp
Source/Common/Algorithm/src/Widgets/: Controller.cpp
Source/Common/Complex-Application/include/: Plugin.h  Util.h
Source/Common/Complex-Application/include/Widgets/: Controller.h
Source/Common/Complex-Application/res/ui/: Controller.ui
Source/Common/Complex-Application/src/: Plugin.cpp  PluginMetaData.cpp
Source/Common/Generic/include/: LogManager.h
Source/Common/Generic/src/: LogManager.cpp
Source/Common/Programming-Game-AI/Common/include/: BaseGameEntity.h  MessageDispatcher.h  Telegram.h
Source/Common/Programming-Game-AI/Common/src/: BaseGameEntity.cpp  MessageDispatcher.cpp  Telegram.cpp
Source/Modules/: CMakeLists.txt
Source/Modules/Algorithm/: CMakeLists.txt
Source/Modules/Algorithm/include/: Application.h  MainWindow.h  PluginManager.h
Source/Modules/Algorithm/res/ui/: MainWindow.ui
Source/Modules/Algorithm/src/: Application.cpp  MainWindow.cpp  MainWindow_Callback.cpp  PluginManager.cpp
Source/Modules/Complex-Application/: CMakeLists.txt
Source/Modules/Complex-Application/res/ui/: MainWindow.ui
Source/Modules/Complex-Application/src/: Application.cpp  Main.cpp  MainWindow.cpp  MainWindow_Callback.cpp  PluginManager.cpp
Source/Plugins/: CMakeLists.txt
Source/Plugins/Algorithm/Bubble-Sort/: CMakeLists.txt
Source/Plugins/Algorithm/Bubble-Sort/include/: BubbleSort.h  BubbleSort.json
Source/Plugins/Algorithm/Bubble-Sort/src/: BubbleSort.cpp
Source/Plugins/Algorithm/Echo-Form/: CMakeLists.txt
Source/Plugins/Algorithm/Echo-Form/include/: EchoForm.h  EchoForm.json
Source/Plugins/Algorithm/Echo-Form/src/: EchoForm.cpp
Source/Plugins/Algorithms-Datastructures/Bubble-Sort/: CMakeLists.txt
Source/Plugins/Algorithms-Datastructures/Bubble-Sort/src/: BubbleSort.cpp
Source/Plugins/Complex-Application/: CMakeLists.txt
Source/Plugins/Complex-Application/Bubble-Sort/: CMakeLists.txt
Source/Plugins/Complex-Application/Echo-Form/: CMakeLists.txt
Source/Plugins/Complex-Application/Echo-Form/include/: EchoForm.h  EchoForm.json
Source/Plugins/Complex-Application/Echo-Form/src/: EchoForm.cpp
Source/Plugins/Programming-Game-AI/Steering-Behaviours/: CMakeLists.txt
Source/Plugins/Programming-Game-AI/Steering-Behaviours/include/: PluginWidget.h  PluginWidget.json
Source/Plugins/Programming-Game-AI/Steering-Behaviours/src/: PluginWidget.cpp
Sources/: CMakeLists.txt
Sources/CMake/: CommonComplexApplicationFiles.cmake  CommonFiles.cmake  CommonProgrammingGameAIFiles.cmake  IncludeLoguru.cmake
Sources/Common/Complex-Application/include/: Plugin.h  PluginMetaData.h  Util.h
Sources/Common/Complex-Application/include/Widgets/: Controller.h
Sources/Common/Complex-Application/res/ui/: Controller.ui
Sources/Common/Complex-Application/src/: Plugin.cpp  PluginMetaData.cpp
Sources/Common/Complex-Application/src/Widgets/: Controller.cpp
Sources/Common/Programming-Game-AI/Common/include/: BaseGameEntity.h  MessageDispatcher.h  Telegram.h
Sources/Common/Programming-Game-AI/Common/src/: BaseGameEntity.cpp  MessageDispatcher.cpp  Telegram.cpp
Sources/Modules/: CMakeLists.txt
Sources/Modules/Complex-Application/: CMakeLists.txt
Sources/Modules/Complex-Application/include/: Application.h  MainWindow.h  PluginManager.h
Sources/Modules/Complex-Application/res/ui/: MainWindow.ui
Sources/Modules/Complex-Application/src/: Application.cpp  Main.cpp  MainWindow.cpp  MainWindow_Callback.cpp  PluginManager.cpp
Sources/Modules/Samples/: CMakeLists.txt
Sources/Modules/Samples/Cpp/: CMakeLists.txt
Sources/Modules/Samples/Cpp/Constructors/: CMakeLists.txt
Sources/Modules/Samples/Cpp/GeneratedConstructors/: CMakeLists.txt
Sources/Modules/Samples/Cpp/GeneratedConstructors/src/: main.cpp
Sources/Plugins/: CMakeLists.txt
Sources/Plugins/Algorithms-Datastructures/: CMakeLists.txt
Sources/Plugins/Algorithms-Datastructures/Bubble-Sort/: CMakeLists.txt
Sources/Plugins/Algorithms-Datastructures/Bubble-Sort/include/: BubbleSort.h  BubbleSort.json
Sources/Plugins/Algorithms-Datastructures/Bubble-Sort/src/: BubbleSort.cpp
Sources/Plugins/Algorithms-Datastructures/Kalman-Filter/: CMakeLists.txt
Sources/Plugins/Algorithms-Datastructures/Kalman-Filter/include/: ChartView.h  KalmanFilter.h  KalmanFilter.json
Sources/Plugins/Algorithms-Datastructures/Kalman-Filter/src/: ChartView.cpp  KalmanFilter.cpp
Sources/Plugins/Algorithms-Datastructures/MiniMax/: CMakeLists.txt
Sources/Plugins/Algorithms-Datastructures/MiniMax/include/: Cell.h  Description.json  GameView.h  Widget.h
Sources/Plugins/Algorithms-Datastructures/MiniMax/res/ui/: Widget.ui
Sources/Plugins/Algorithms-Datastructures/MiniMax/src/: Cell.cpp  GameView.cpp  Widget.cpp
Sources/Plugins/Complex-Application/: CMakeLists.txt
Sources/Plugins/Complex-Application/Echo-Form/: CMakeLists.txt
Sources/Plugins/Complex-Application/Echo-Form/include/: EchoForm.h
Sources/Plugins/Complex-Application/Echo-Form/src/: EchoForm.cpp
Sources/Plugins/Complex-Application/Ogre-Render/: CMakeLists.txt
Sources/Plugins/Complex-Application/Ogre-Render/include/: PluginWidget.h  PluginWidget.json
Sources/Plugins/Complex-Application/Ogre-Render/src/: PluginWidget.cpp
Sources/Plugins/Programming-Game-AI/: CMakeLists.txt
Sources/Plugins/Programming-Game-AI/Steering-Behaviours/: CMakeLists.txt
Sources/Plugins/Programming-Game-AI/Steering-Behaviours/include/: PluginWidget.h
Third-Parties/loguru/2.1.0/: loguru.hpp
(+9 files in other folders)
